# X_Ray_LLM

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_TAB_FINAL_GUIDE.txt  COMPLETION_SUMMARY.md  COST_BENEFIT_ANALYSIS_2026.md  DESIGN_REVIEW.md  Dockerfile  Enhance_Plan.md  FEATURES.md  FEATURE_COMPARISON.md  FILE_MAP.txt  FINAL_RESULTS.md  FIX_REPORT.md  Ishues.md  MANIFEST.in  ORADEA_RAG_SUMMARY.txt  ORADEA_TEST_COMPLETE_REPORT.txt  PHASE_STATUS.md  PORTABILITY_AUDIT_REPORT.md  QUICK_START_CHECKLIST.txt  README.md  Rebuild_Prompt.md  Run_me.bat  SESSION_NOTES_BACKUP_2026-03-18.md  SESSION_STATE.md  SYSTEM_COMPLETE_SUMMARY.txt  TODO.md  To_Do.md  X_RAY_LLM_GUIDE.md  _check_grade.py  _gen_test_calendar.txt  _gen_test_run.txt  _quick_scan.py  _read_report.py  _self_scan.py  action.yml  analyzers.py  (+84 more)
.claude/: CLAUDE.md.template  README.md  settings.local.json
.claude/agents/: architect.md  backend-dev.md  devops.md  feedback-triage.md  frontend-dev.md  product-strategist.md  reviewer.md  security-auditor.md  spec-writer.md  (+2 more)
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
Analysis/: _analyzer_base.py  ai_code_detector.py  ast_utils.py  auto_rustify.py  coverage.py  dead_functions.py  design_oracle.py  diagram_export.py  duplicates.py  format.py  git_hotspots.py  imports.py  library_advisor.py  lint.py  llm_transpiler.py  port_project.py  project_health.py  quality_gate.py  release_checklist.py  release_readiness.py  reporting.py  rust_advisor.py  satd.py  scan_cache.py  security.py  semantic_fuzzer.py  similarity.py  smart_graph.py  smell_fixer.py  smells.py  temporal_coupling.py  test_gen.py  test_generator.py  tracer.py  transpiler.py  transpiler_legacy.py  trend.py  type_coverage.py  typecheck.py  ui_compat.py  (+3 more)
Core/: ast_helpers.py  cli_args.py  config.py  i18n.py  inference.py  llm_manager.py  scan_context.py  scan_phases.py  types.py  ui_bridge.py  utils.py
Core/x_ray_core/: Cargo.toml
Core/x_ray_core/src/: lib.rs
Lang/: js_ts_analyzer.py  python_ast.py  tokenizer.py
UI/: shell_v2.py
X_Ray_Rust_Full/: Cargo.toml
X_Ray_Rust_Full/src/: ast_parse.rs  config.rs  duplicates.rs  external.rs  library_advisor.rs  main.rs  reporting.rs  semantic_fuzzer.rs  similarity.rs  smart_graph.rs  smells.rs  test_gen.rs  tokenizer.rs  transpiler.rs  types.rs
_mothership/: SYNC_MANIFEST.json  __init__.py  hardware_detection.py  models.py  settings_service.py
_rustified/: test_golden_capture.py  test_rust_verify.py
_rustified/xray_rustified/: Cargo.toml
_rustified/xray_rustified/src/: lib.rs  main.rs
_rustified_exe_build/: test_golden_capture.py  test_rust_verify.py
_scratch/: _audit_transpiler.py  _check_weak.py  analyze_remaining_syntax.py  analyze_report.py  analyze_syntax_errors.py  audit_flet.py  compare_errors.py  parse_zen_report.py  read_report.py  retranspile_pairs.py  run_grade.py  test_transpiler_expansion.py  test_transpiler_tier3.py  test_transpiler_tier4.py  zen_allinone.py  zen_comprehensive_fix.py  zen_deep_extract.py  zen_deep_refactor.py  zen_docstrings_only.py  zen_fix_docstrings.py  zen_fix_smells.py  zen_fixer.py  zen_issues_detail.py  zen_mega_fix.py  zen_mega_refactor.py  zen_nesting_reducer.py  zen_nesting_v3.py  zen_refactor.py  zen_refactor_v2.py  zen_rescan.py  zen_splitter_v2.py
analyzers/: __init__.py  _shared.py  connections.py  contracts.py  coverage_map.py  design_review.py  detection.py  format_check.py  graph.py  health.py  integration_tests.py  orphan_map.py  pm_dashboard.py  schema_drift.py  security.py  smart_test_gen.py  smells.py  temporal.py
api/: __init__.py  analysis_routes.py  browse_routes.py  fix_routes.py  pm_routes.py  review_routes.py  scan_routes.py  transpile_routes.py
benchmarks/: README.md  __init__.py  run_benchmark.py  test_cases.json
docs/: ALL_PROJECTS_IMPROVEMENT_PLAN.md  AUDIT_SUMMARY_2026_03_21.md  CHANGELOG.md  CI_CD_SETUP.md  DESIGN_REVIEW.md  DEVELOPMENT_WORKFLOW.md  Enhance_Plan.md  FEATURES.md  FLET_API_VALIDATION.md  FUTURE_PLAN.md  NEXT_STEPS.md  RELEASE_NOTES_2026-04-01.md  SECURITY.md  SOTA_ANALYSIS_2026.md  TESTING.md  USAGE.md  how_to_download_rust.md  review-report.md
scanner/: Cargo.toml  pyproject.toml
scanner/src/: ast_analysis.rs  config.rs  constants.rs  fixer.rs  lib.rs  main.rs  pybridge.rs  sarif.rs  types.rs
scanner/src/analyzers/: connections.rs  detection.rs  format_check.rs  git_analyzer.rs  graph.rs  health.rs  mod.rs  pm_dashboard.rs  satd.rs  security.rs  smells.rs  temporal.rs
scanner/src/rules/: mod.rs
scanner/src/server/: mod.rs  routes.rs  state.rs
scripts/: bump_version.py  scan_llm_paths.py  show_scan.py
services/: __init__.py  app_state.py  chat_engine.py  git_analyzer.py  review_feedback.py  satd_scanner.py  scan_manager.py
tests/: bench_rust.py  conftest.py  conftest_analyzers.py  harness_common.py  harness_dogfood.py  harness_generative.py  harness_generative_parity.py  harness_transpilation.py  shared_tokenize_tests.py  strict_parity_suite.py  test_agent_loop.py  test_analysis_ai_code_detector.py  test_analysis_diagram_export.py  test_analysis_duplicates.py  test_analysis_git_hotspots.py  test_analysis_lint.py  test_analysis_project_health.py  test_analysis_quality_gate.py  test_analysis_rustadvisor.py  test_analysis_satd.py  test_analysis_security.py  test_analysis_similarity.py  test_analysis_smell_fixer.py  test_analysis_smells.py  test_analysis_temporal_coupling.py  test_analysis_test_generator.py  test_analysis_testgen.py  test_analysis_tracer.py  test_analysis_web_smells.py  test_analyzers.py  test_api_compat.py  test_build.py  test_compat.py  test_compat_stress.py  test_comprehensive.py  test_config.py  test_connection_analyzer.py  test_core_inference.py  test_core_types.py  test_core_utils.py  (+53 more)
xray/: __init__.py  __main__.py  agent.py  compat.py  confidence.py  config.py  constants.py  fingerprint.py  fixer.py  llm.py  native_bridge.py  pipeline.py  portability_audit.py  runner.py  sarif.py  sca.py  scanner.py  transpiler.py  types.py  watcher.py  wire_connector.py  yaml_rules.py
(+329 files in other folders)
