[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "xray-llm"
version = "0.1.0"
description = "Self-improving code quality agent — SCAN → TEST → FIX → VERIFY → LOOP"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
xray = "xray.agent:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
