[package]
name = "x_ray"
version = "5.0.0"
edition = "2021"
description = "X-Ray: Unified Python Code Quality Scanner (Rust)"
authors = ["X-Ray Team"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
regex = "1"
rayon = "1"
walkdir = "2"
colored = "2"

[[bin]]
name = "X_Ray"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
