[package]
name = "xray-scanner"
version = "0.1.0"
edition = "2021"
description = "High-performance code scanner for X-Ray LLM agent"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }

[lib]
name = "xray_scanner"
crate-type = ["cdylib", "rlib"]
