[package]
name = "xray_rustified"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xray_rustified"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
rayon = "1.10"
regex = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
